--- a/PIC32/EFG(new)/SmartBlinds.X/nbproject/Makefile-genesis.properties
+++ b/PIC32/EFG(new)/SmartBlinds.X/nbproject/Makefile-genesis.properties
@@ -1,8 +1,8 @@
 #
-#Fri Oct 25 16:22:41 PDT 2019
+#Mon Nov 04 14:53:44 PST 2019
 default.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=f86c6f65de49a1ea6ceda521d64aed4e
 default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc32\\v2.15\\bin
-configurations-xml=ee460fb2ae3acbb5bc49e3531184c38b
+configurations-xml=ce193f4b6f80415c4e06409d334c87c8
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=fe6bc8387062251d924fb28d44703093
 default.languagetoolchain.version=2.15
 host.platform=windows
