--- a/PIC32/EFG(new)/SmartBlinds.X/nbproject/Makefile-genesis.properties
+++ b/PIC32/EFG(new)/SmartBlinds.X/nbproject/Makefile-genesis.properties
@@ -1,9 +1,10 @@
 #
-#Mon Nov 04 14:53:44 PST 2019
-default.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=f86c6f65de49a1ea6ceda521d64aed4e
+#Mon Nov 04 15:35:58 PST 2019
+default.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=7f2420dbff4a943a618b911f4b1e6a5c
+default.Pack.dfplocation=
 default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc32\\v2.15\\bin
-configurations-xml=ce193f4b6f80415c4e06409d334c87c8
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=fe6bc8387062251d924fb28d44703093
+configurations-xml=a4452258276d8b81dacc67ae692a6445
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=7cd2eead2ea6964989cbf02efe721a76
 default.languagetoolchain.version=2.15
 host.platform=windows
 conf.ids=default
