--- a/PIC32/EFG(new)/SmartBlinds.X/nbproject/Makefile-genesis.properties
+++ b/PIC32/EFG(new)/SmartBlinds.X/nbproject/Makefile-genesis.properties
@@ -1,10 +1,10 @@
 #
-#Mon Nov 04 15:35:58 PST 2019
-default.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=7f2420dbff4a943a618b911f4b1e6a5c
-default.Pack.dfplocation=
-default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc32\\v2.15\\bin
-configurations-xml=a4452258276d8b81dacc67ae692a6445
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=7cd2eead2ea6964989cbf02efe721a76
-default.languagetoolchain.version=2.15
+#Wed Nov 06 16:58:24 PST 2019
+default.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=1a20d9bf64c9a17b5eea0e731fcffb03
+default.Pack.dfplocation=C\:\\Program Files (x86)\\Microchip\\MPLABX\\v5.25\\packs\\Microchip\\PIC32MZ-EF_DFP\\1.0.20
+default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc32\\v2.30\\bin
+configurations-xml=fb2fdf07a5ce2fac5c926aba24a10c09
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=6e453b0cf7f7da72a932cfdb2f655401
+default.languagetoolchain.version=2.30
 host.platform=windows
 conf.ids=default
