--- a/PIC32/EFG(new)/SmartBlinds.X/nbproject/Makefile-genesis.properties
+++ b/PIC32/EFG(new)/SmartBlinds.X/nbproject/Makefile-genesis.properties
@@ -1,10 +1,10 @@
 #
-#Mon Nov 04 15:35:58 PST 2019
+#Fri Nov 15 09:24:04 PST 2019
 default.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=7f2420dbff4a943a618b911f4b1e6a5c
-default.Pack.dfplocation=
-default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc32\\v2.15\\bin
-configurations-xml=a4452258276d8b81dacc67ae692a6445
+default.Pack.dfplocation=C\:\\Users\\Drew Deraita\\.mchp_packs\\Microchip\\PIC32MZ-EF_DFP\\1.0.20
+default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc32\\v2.30\\bin
+configurations-xml=7ae8a0b23c3a714e353633a5cc0664c8
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=7cd2eead2ea6964989cbf02efe721a76
-default.languagetoolchain.version=2.15
+default.languagetoolchain.version=2.30
 host.platform=windows
 conf.ids=default
