Stepper Motor Ready For Testing
Set up functions that should have the motor turn CW or CCW depending on what motor id is called. Also began the buzzer file. Will be filling out more soon.

--- a/PIC32/EFG(new)/SmartBlinds.X/nbproject/Makefile-genesis.properties
+++ b/PIC32/EFG(new)/SmartBlinds.X/nbproject/Makefile-genesis.properties
@@ -1,9 +1,9 @@
 #
-#Mon Dec 02 17:20:43 PST 2019
+#Wed Dec 04 15:38:53 PST 2019
 default.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=7f2420dbff4a943a618b911f4b1e6a5c
-default.Pack.dfplocation=C\:\\Program Files (x86)\\Microchip\\MPLABX\\v5.30\\packs\\Microchip\\PIC32MZ-EF_DFP\\1.1.45
-default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc32\\v2.30\\bin
-configurations-xml=eeef99c44fa7c8890249355c46531598
+default.Pack.dfplocation=D\:\\Program Files (x86)\\Microchip\\MPLABX\\v5.30\\packs\\Microchip\\PIC32MZ-EF_DFP\\1.1.45
+default.languagetoolchain.dir=D\:\\Program Files (x86)\\Microchip\\xc32\\v2.30\\bin
+configurations-xml=7633cced06bd208399c33b5a92591634
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=7cd2eead2ea6964989cbf02efe721a76
 default.languagetoolchain.version=2.30
 host.platform=windows
