--- a/PIC32/EFG(new)/SmartBlinds.X/nbproject/Makefile-genesis.properties
+++ b/PIC32/EFG(new)/SmartBlinds.X/nbproject/Makefile-genesis.properties
@@ -1,9 +1,10 @@
 #
-#Tue Dec 17 14:21:02 PST 2019
-default.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=f86c6f65de49a1ea6ceda521d64aed4e
-default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc32\\v2.30\\bin
-configurations-xml=bc695d36c36ddd4c618946b3b245b1cb
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=fe6bc8387062251d924fb28d44703093
+#Wed Jan 01 18:37:47 PST 2020
+default.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=7f2420dbff4a943a618b911f4b1e6a5c
+default.Pack.dfplocation=D\:\\Program Files (x86)\\Microchip\\MPLABX\\v5.30\\packs\\Microchip\\PIC32MZ-EF_DFP\\1.1.45
+default.languagetoolchain.dir=D\:\\Program Files (x86)\\Microchip\\xc32\\v2.30\\bin
+configurations-xml=612841ba063217da0c6d02715da59e36
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=7cd2eead2ea6964989cbf02efe721a76
 default.languagetoolchain.version=2.30
 host.platform=windows
 conf.ids=default
