--- a/PIC32/EFG(new)/SmartBlinds.X/nbproject/Makefile-genesis.properties
+++ b/PIC32/EFG(new)/SmartBlinds.X/nbproject/Makefile-genesis.properties
@@ -1,8 +1,8 @@
 #
-#Wed Jan 01 18:37:47 PST 2020
+#Tue Jan 07 12:55:25 PST 2020
 default.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=7f2420dbff4a943a618b911f4b1e6a5c
-default.Pack.dfplocation=D\:\\Program Files (x86)\\Microchip\\MPLABX\\v5.30\\packs\\Microchip\\PIC32MZ-EF_DFP\\1.1.45
-default.languagetoolchain.dir=D\:\\Program Files (x86)\\Microchip\\xc32\\v2.30\\bin
+default.Pack.dfplocation=C\:\\Program Files (x86)\\Microchip\\MPLABX\\v5.30\\packs\\Microchip\\PIC32MZ-EF_DFP\\1.1.45
+default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc32\\v2.30\\bin
 configurations-xml=612841ba063217da0c6d02715da59e36
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=7cd2eead2ea6964989cbf02efe721a76
 default.languagetoolchain.version=2.30
