futher updating to PIC32
Got most initialization done, still need to modify some defines. Also need to modify SPI routine to SPI4, instead of SPI2.

--- a/PIC32/EFG(new)/WINCPORTING.X/nbproject/Makefile-genesis.properties
+++ b/PIC32/EFG(new)/WINCPORTING.X/nbproject/Makefile-genesis.properties
@@ -1,10 +1,14 @@
 #
-#Wed Jan 22 20:12:34 PST 2020
-exp16_pic24fj128ga310_winc1500.languagetoolchain.version=1.41
-exp16_pic24fj128ga310_winc1500.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc16\\v1.41\\bin
-exp16_pic24fj128ga310_winc1500.com-microchip-mplab-nbide-toolchainXC16-XC16LanguageToolchain.md5=3de759bc6af06f5ee7453ec146192402
-exp16_pic24fj128ga310_winc1500.Pack.dfplocation=C\:\\Users\\Drew Deraita\\.mchp_packs\\Microchip\\PIC24F-GA-GB_DFP\\1.1.74
-configurations-xml=9d605ec9be9952322ba50f606080b623
+#Fri Jan 24 16:02:00 PST 2020
+pic32mz2048efg144_winc1500.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc32\\v2.30\\bin
+conf.ids=exp16_pic24fj128ga310_winc1500,pic32mz2048efg144_winc1500
+pic32mz2048efg144_winc1500.languagetoolchain.version=2.30
+exp16_pic24fj128ga310_winc1500.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=7f2420dbff4a943a618b911f4b1e6a5c
+pic32mz2048efg144_winc1500.Pack.dfplocation=C\:\\Program Files (x86)\\Microchip\\MPLABX\\v5.30\\packs\\Microchip\\PIC32MZ-EF_DFP\\1.1.45
+configurations-xml=d0045224cc5a14ed76c885168482486c
+exp16_pic24fj128ga310_winc1500.languagetoolchain.version=2.30
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=7cd2eead2ea6964989cbf02efe721a76
+exp16_pic24fj128ga310_winc1500.Pack.dfplocation=C\:\\Program Files (x86)\\Microchip\\MPLABX\\v5.30\\packs\\Microchip\\PIC32MZ-EF_DFP\\1.1.45
+pic32mz2048efg144_winc1500.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=7f2420dbff4a943a618b911f4b1e6a5c
 host.platform=windows
-conf.ids=exp16_pic24fj128ga310_winc1500
+exp16_pic24fj128ga310_winc1500.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc32\\v2.30\\bin
