compiles but still something wrong
gotta get an oscope to analyze SPI output to determine issue with communictaion

--- a/PIC32/EFG(new)/SmartBlinds.X/nbproject/Makefile-genesis.properties
+++ b/PIC32/EFG(new)/SmartBlinds.X/nbproject/Makefile-genesis.properties
@@ -1,10 +1,14 @@
 #
-#Wed Jan 22 11:57:11 PST 2020
-default.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=7f2420dbff4a943a618b911f4b1e6a5c
-default.Pack.dfplocation=C\:\\Users\\Drew Deraita\\.mchp_packs\\Microchip\\PIC32MZ-EF_DFP\\1.0.20
-default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc32\\v2.30\\bin
-configurations-xml=b6dc9eb8a3ef87cd4dd9df0a054edbb9
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=7cd2eead2ea6964989cbf02efe721a76
+#Mon Jan 27 14:09:40 PST 2020
 default.languagetoolchain.version=2.30
+default.Pack.dfplocation=C\:\\Program Files (x86)\\Microchip\\MPLABX\\v5.30\\packs\\Microchip\\PIC32MZ-EF_DFP\\1.1.45
+conf.ids=default,EFM
+default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc32\\v2.30\\bin
+EFM.languagetoolchain.version=2.30
+configurations-xml=fff446eb131898ed8ea37b603bc61b2e
+default.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=7f2420dbff4a943a618b911f4b1e6a5c
+EFM.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc32\\v2.30\\bin
+EFM.Pack.dfplocation=C\:\\Users\\Drew Deraita\\.mchp_packs\\Microchip\\PIC32MZ-EF_DFP\\1.0.20
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=7cd2eead2ea6964989cbf02efe721a76
+EFM.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=7f2420dbff4a943a618b911f4b1e6a5c
 host.platform=windows
-conf.ids=default
