--- a/PIC32/EFG(new)/WINCPORTING.X/nbproject/Makefile-genesis.properties
+++ b/PIC32/EFG(new)/WINCPORTING.X/nbproject/Makefile-genesis.properties
@@ -1,14 +1,18 @@
 #
-#Fri Jan 24 16:02:00 PST 2020
+#Wed Jan 29 16:38:17 PST 2020
+pic32mz2048efm144_winc1500.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc32\\v2.30\\bin
 pic32mz2048efg144_winc1500.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc32\\v2.30\\bin
-conf.ids=exp16_pic24fj128ga310_winc1500,pic32mz2048efg144_winc1500
+conf.ids=exp16_pic24fj128ga310_winc1500,pic32mz2048efg144_winc1500,pic32mz2048efm144_winc1500
+pic32mz2048efm144_winc1500.Pack.dfplocation=C\:\\Program Files (x86)\\Microchip\\MPLABX\\v5.30\\packs\\Microchip\\PIC32MZ-EF_DFP\\1.1.45
 pic32mz2048efg144_winc1500.languagetoolchain.version=2.30
 exp16_pic24fj128ga310_winc1500.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=7f2420dbff4a943a618b911f4b1e6a5c
 pic32mz2048efg144_winc1500.Pack.dfplocation=C\:\\Program Files (x86)\\Microchip\\MPLABX\\v5.30\\packs\\Microchip\\PIC32MZ-EF_DFP\\1.1.45
-configurations-xml=d0045224cc5a14ed76c885168482486c
+configurations-xml=aa94ebcc6737942872adccf038eddc1a
 exp16_pic24fj128ga310_winc1500.languagetoolchain.version=2.30
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=7cd2eead2ea6964989cbf02efe721a76
 exp16_pic24fj128ga310_winc1500.Pack.dfplocation=C\:\\Program Files (x86)\\Microchip\\MPLABX\\v5.30\\packs\\Microchip\\PIC32MZ-EF_DFP\\1.1.45
+pic32mz2048efm144_winc1500.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=7f2420dbff4a943a618b911f4b1e6a5c
 pic32mz2048efg144_winc1500.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=7f2420dbff4a943a618b911f4b1e6a5c
+pic32mz2048efm144_winc1500.languagetoolchain.version=2.30
 host.platform=windows
 exp16_pic24fj128ga310_winc1500.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc32\\v2.30\\bin
