--- a/PIC32/EFG(new)/SmartBlinds.X/nbproject/Makefile-genesis.properties
+++ b/PIC32/EFG(new)/SmartBlinds.X/nbproject/Makefile-genesis.properties
@@ -1,19 +1,10 @@
 #
-<<<<<<< HEAD
-#Thu Jan 30 17:34:50 PST 2020
-default.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=1a20d9bf64c9a17b5eea0e731fcffb03
-default.Pack.dfplocation=C\:\\Program Files (x86)\\Microchip\\MPLABX\\v5.25\\packs\\Microchip\\PIC32MZ-EF_DFP\\1.0.20
-default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc32\\v2.30\\bin
-configurations-xml=3b2f015b5f90ebbbcb0fdc0fa41d2509
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=6e453b0cf7f7da72a932cfdb2f655401
-=======
-#Fri Jan 31 17:16:26 PST 2020
-default.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=f86c6f65de49a1ea6ceda521d64aed4e
+#Sun Feb 02 12:31:58 PST 2020
+default.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=7f2420dbff4a943a618b911f4b1e6a5c
+default.Pack.dfplocation=C\:\\Users\\Drew Deraita\\.mchp_packs\\Microchip\\PIC32MZ-EF_DFP\\1.0.20
 default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc32\\v2.30\\bin
 configurations-xml=de54ca3cb1503129ed08f46d71e7c2f9
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=fe6bc8387062251d924fb28d44703093
-
->>>>>>> cb56e8a462f6d134a2a5e9da95074971caf2461a
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=7cd2eead2ea6964989cbf02efe721a76
 default.languagetoolchain.version=2.30
 host.platform=windows
 conf.ids=default
