--- a/PIC32/EFG(new)/WINCPORTED.X/nbproject/Makefile-genesis.properties
+++ b/PIC32/EFG(new)/WINCPORTED.X/nbproject/Makefile-genesis.properties
@@ -1,15 +1,18 @@
 #
-#Sun Feb 02 12:23:34 PST 2020
+#Sun Feb 02 14:09:38 PST 2020
 pic32mz2048efm144_winc1500.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc32\\v2.30\\bin
 pic32mz2048efg144_winc1500.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc32\\v2.30\\bin
 conf.ids=exp16_pic24fj128ga310_winc1500,pic32mz2048efg144_winc1500,pic32mz2048efm144_winc1500
+pic32mz2048efm144_winc1500.Pack.dfplocation=C\:\\Users\\Drew Deraita\\.mchp_packs\\Microchip\\PIC32MZ-EF_DFP\\1.0.20
 pic32mz2048efg144_winc1500.languagetoolchain.version=2.30
-exp16_pic24fj128ga310_winc1500.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=f86c6f65de49a1ea6ceda521d64aed4e
-configurations-xml=70dee1d1cc4fc54b9e3f67d4932f443e
+exp16_pic24fj128ga310_winc1500.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=7f2420dbff4a943a618b911f4b1e6a5c
+pic32mz2048efg144_winc1500.Pack.dfplocation=C\:\\Users\\Drew Deraita\\.mchp_packs\\Microchip\\PIC32MZ-EF_DFP\\1.0.20
+configurations-xml=cee22cb8cee88413f8bd9a9697515dc6
 exp16_pic24fj128ga310_winc1500.languagetoolchain.version=2.30
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=fe6bc8387062251d924fb28d44703093
-pic32mz2048efm144_winc1500.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=f86c6f65de49a1ea6ceda521d64aed4e
-pic32mz2048efg144_winc1500.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=f86c6f65de49a1ea6ceda521d64aed4e
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=7cd2eead2ea6964989cbf02efe721a76
+exp16_pic24fj128ga310_winc1500.Pack.dfplocation=C\:\\Users\\Drew Deraita\\.mchp_packs\\Microchip\\PIC32MZ-EF_DFP\\1.0.20
+pic32mz2048efm144_winc1500.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=7f2420dbff4a943a618b911f4b1e6a5c
+pic32mz2048efg144_winc1500.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=7f2420dbff4a943a618b911f4b1e6a5c
 pic32mz2048efm144_winc1500.languagetoolchain.version=2.30
 host.platform=windows
 exp16_pic24fj128ga310_winc1500.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc32\\v2.30\\bin
