--- a/PIC32/EFG(new)/SmartBlinds.X/nbproject/Makefile-genesis.properties
+++ b/PIC32/EFG(new)/SmartBlinds.X/nbproject/Makefile-genesis.properties
@@ -1,19 +1,18 @@
 #
-
-#Thu Feb 13 17:38:40 PST 2020
-pic32mz2048efm144_winc1500.languagetoolchain.dir=D\:\\Program Files (x86)\\Microchip\\xc32\\v2.30\\bin
-pic32mz2048efg144_winc1500.languagetoolchain.dir=D\:\\Program Files (x86)\\Microchip\\xc32\\v2.30\\bin
+#Wed Feb 19 12:15:21 PST 2020
+pic32mz2048efm144_winc1500.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc32\\v2.30\\bin
+pic32mz2048efg144_winc1500.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc32\\v2.30\\bin
 conf.ids=exp16_pic24fj128ga310_winc1500,pic32mz2048efg144_winc1500,pic32mz2048efm144_winc1500
-pic32mz2048efm144_winc1500.Pack.dfplocation=C\:\\Users\\thede\\.mchp_packs\\Microchip\\PIC32MZ-EF_DFP\\1.0.20
+pic32mz2048efm144_winc1500.Pack.dfplocation=C\:\\Users\\Drew Deraita\\.mchp_packs\\Microchip\\PIC32MZ-EF_DFP\\1.0.20
 pic32mz2048efg144_winc1500.languagetoolchain.version=2.30
 exp16_pic24fj128ga310_winc1500.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=7f2420dbff4a943a618b911f4b1e6a5c
-pic32mz2048efg144_winc1500.Pack.dfplocation=C\:\\Users\\thede\\.mchp_packs\\Microchip\\PIC32MZ-EF_DFP\\1.0.20
-configurations-xml=84f15e857fd272697a0fa51a8d35a714
+pic32mz2048efg144_winc1500.Pack.dfplocation=C\:\\Users\\Drew Deraita\\.mchp_packs\\Microchip\\PIC32MZ-EF_DFP\\1.0.20
+configurations-xml=72b2e0c378b020e94570bc1a55aa8eca
 exp16_pic24fj128ga310_winc1500.languagetoolchain.version=2.30
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=7cd2eead2ea6964989cbf02efe721a76
-exp16_pic24fj128ga310_winc1500.Pack.dfplocation=C\:\\Users\\thede\\.mchp_packs\\Microchip\\PIC32MZ-EF_DFP\\1.0.20
+exp16_pic24fj128ga310_winc1500.Pack.dfplocation=C\:\\Users\\Drew Deraita\\.mchp_packs\\Microchip\\PIC32MZ-EF_DFP\\1.0.20
 pic32mz2048efm144_winc1500.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=7f2420dbff4a943a618b911f4b1e6a5c
 pic32mz2048efg144_winc1500.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=7f2420dbff4a943a618b911f4b1e6a5c
 pic32mz2048efm144_winc1500.languagetoolchain.version=2.30
 host.platform=windows
-exp16_pic24fj128ga310_winc1500.languagetoolchain.dir=D\:\\Program Files (x86)\\Microchip\\xc32\\v2.30\\bin
+exp16_pic24fj128ga310_winc1500.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc32\\v2.30\\bin
