--- a/.gitignore
+++ b/.gitignore
@@ -344,3 +344,4 @@ ASALocalRun/
 PIC32/EFG(new)/SmartBlinds.X/nbproject/private/private.xml
 PIC32/EFG(new)/SmartBlinds.X/nbproject/private/private.xml
 *.mk
+PIC32/EFG(new)/SmartBlinds.X/nbproject/private/private.xml
