--- a/.gitignore
+++ b/.gitignore
@@ -345,3 +345,4 @@ PIC32/EFG(new)/SmartBlinds.X/nbproject/private/private.xml
 PIC32/EFG(new)/SmartBlinds.X/nbproject/private/private.xml
 *.mk
 PIC32/EFG(new)/SmartBlinds.X/nbproject/private/private.xml
+*.xml
