--- a/PIC32/EFG(new)/SmartBlinds.X/nbproject/Makefile-genesis.properties
+++ b/PIC32/EFG(new)/SmartBlinds.X/nbproject/Makefile-genesis.properties
@@ -1,18 +1,18 @@
 #
-#Fri Mar 06 07:02:21 PST 2020
-pic32mz2048efm144_winc1500.languagetoolchain.dir=D\:\\Program Files (x86)\\Microchip\\xc32\\v2.30\\bin
-pic32mz2048efg144_winc1500.languagetoolchain.dir=D\:\\Program Files (x86)\\Microchip\\xc32\\v2.30\\bin
+#Fri Mar 06 11:40:43 PST 2020
+pic32mz2048efm144_winc1500.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc32\\v2.30\\bin
+pic32mz2048efg144_winc1500.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc32\\v2.30\\bin
 conf.ids=exp16_pic24fj128ga310_winc1500,pic32mz2048efg144_winc1500,pic32mz2048efm144_winc1500
-pic32mz2048efm144_winc1500.Pack.dfplocation=C\:\\Users\\thede\\.mchp_packs\\Microchip\\PIC32MZ-EF_DFP\\1.0.20
+pic32mz2048efm144_winc1500.Pack.dfplocation=C\:\\Users\\Drew Deraita\\.mchp_packs\\Microchip\\PIC32MZ-EF_DFP\\1.0.20
 pic32mz2048efg144_winc1500.languagetoolchain.version=2.30
 exp16_pic24fj128ga310_winc1500.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=7f2420dbff4a943a618b911f4b1e6a5c
-pic32mz2048efg144_winc1500.Pack.dfplocation=C\:\\Users\\thede\\.mchp_packs\\Microchip\\PIC32MZ-EF_DFP\\1.0.20
+pic32mz2048efg144_winc1500.Pack.dfplocation=C\:\\Users\\Drew Deraita\\.mchp_packs\\Microchip\\PIC32MZ-EF_DFP\\1.0.20
 configurations-xml=d0ec6cb331c4a5d4bb69d1b3e96dd0c2
 exp16_pic24fj128ga310_winc1500.languagetoolchain.version=2.30
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=7cd2eead2ea6964989cbf02efe721a76
-exp16_pic24fj128ga310_winc1500.Pack.dfplocation=C\:\\Users\\thede\\.mchp_packs\\Microchip\\PIC32MZ-EF_DFP\\1.0.20
+exp16_pic24fj128ga310_winc1500.Pack.dfplocation=C\:\\Users\\Drew Deraita\\.mchp_packs\\Microchip\\PIC32MZ-EF_DFP\\1.0.20
 pic32mz2048efm144_winc1500.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=7f2420dbff4a943a618b911f4b1e6a5c
 pic32mz2048efg144_winc1500.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=7f2420dbff4a943a618b911f4b1e6a5c
 pic32mz2048efm144_winc1500.languagetoolchain.version=2.30
 host.platform=windows
-exp16_pic24fj128ga310_winc1500.languagetoolchain.dir=D\:\\Program Files (x86)\\Microchip\\xc32\\v2.30\\bin
+exp16_pic24fj128ga310_winc1500.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc32\\v2.30\\bin
