--- a/PIC32/EFG(new)/SmartBlinds.X/nbproject/Makefile-genesis.properties
+++ b/PIC32/EFG(new)/SmartBlinds.X/nbproject/Makefile-genesis.properties
@@ -1,5 +1,5 @@
 #
-#Sat Mar 07 14:51:06 PST 2020
+#Sun Mar 08 13:19:57 PDT 2020
 pic32mz2048efm144_winc1500.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc32\\v2.30\\bin
 pic32mz2048efg144_winc1500.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc32\\v2.30\\bin
 conf.ids=exp16_pic24fj128ga310_winc1500,pic32mz2048efg144_winc1500,pic32mz2048efm144_winc1500
