--- a/ASBproject/AutomatedSmartBlinds/WebAppServices1/Web.config
+++ b/ASBproject/AutomatedSmartBlinds/WebAppServices1/Web.config
@@ -1,17 +1,32 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <!--
   For more information on how to configure your ASP.NET application, please visit
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
   <system.web>
+    <customErrors mode="Off"/>
     <compilation debug="true" targetFramework="4.6.1"/>
     <httpRuntime targetFramework="4.6.1"/>
+    <webServices>
+      <protocols>
+        <add name="HttpGet"/>
+        <add name="HttpPost"/>
+      </protocols>
+    </webServices>
   </system.web>
+  
   <connectionStrings>
     <add name="smartblindsdbConnectionString" connectionString="Data Source=1163PC2\SMARTBLINDSDB;Initial Catalog=smartblindsdb;Integrated Security=True" providerName="System.Data.SqlClient" />
+    
     <add name="SmartblindsDBCS" connectionString="data source=.; Intergrated Security=SSPI;database=  " providerName="System.Data.SqlClient"/>
+
+
+
+    <add name="csWebDB" connectionString="Server=tcp:smartblindsdb.database.windows.net,1433;Initial Catalog=smartblindsdb;Persist Security Info=False;User ID=mcr0berts;Password=Michael.Roberts@oit.edu;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient"/>
+    
   </connectionStrings>
+  
   <system.codedom>
     <compilers>
       <compiler language="c#;cs;csharp" extension=".cs"
@@ -22,4 +37,8 @@
         warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
     </compilers>
   </system.codedom>
+  <system.serviceModel>
+    <diagnostics performanceCounters="Default" />
+    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" />
+  </system.serviceModel>
 </configuration>
