--- a/ASBproject/AutomatedSmartBlinds/WebApplication1/Web.config
+++ b/ASBproject/AutomatedSmartBlinds/WebApplication1/Web.config
@@ -9,8 +9,11 @@
   <connectionStrings>
     <add name="smartblindsdbConnectionString" connectionString="Data Source=1163PC2\SMARTBLINDSDB;Initial Catalog=smartblindsdb;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+
+    <add name="csWebDB" connectionString="Server=tcp:smartblindsdb.database.windows.net,1433;Initial Catalog=smartblindsdb;Persist Security Info=False;User ID=mcr0berts;Password=Michael.Roberts@oit.edu;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
+      <customErrors mode="Off"/>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
     <pages>
@@ -61,10 +64,14 @@
       <basicHttpBinding>
         <binding name="BasicHttpBinding_IsbServices" />
         <binding name="BasicHttpBinding_IHelloService" />
-        <binding name="WebService1Soap" />
-        <binding name="WIN1500TESTSoap" />
         <binding name="SmartBlindsWebServiceSoap" />
       </basicHttpBinding>
+      <customBinding>
+        <binding name="SmartBlindsWebServiceSoap12">
+          <textMessageEncoding messageVersion="Soap12" />
+          <httpTransport />
+        </binding>
+      </customBinding>
       <netTcpBinding>
         <binding name="NetTcpBinding_IHelloService" />
       </netTcpBinding>
@@ -80,15 +87,12 @@
           <userPrincipalName value="JWINC\MikeRob" />
         </identity>
       </endpoint>
-      <endpoint address="http://localhost:54935/WebService1.asmx" binding="basicHttpBinding"
-        bindingConfiguration="WebService1Soap" contract="HelloWorld.WebService1Soap"
-        name="WebService1Soap" />
-      <endpoint address="http://localhost:54298/WIN1500TEST.asmx" binding="basicHttpBinding"
-        bindingConfiguration="WIN1500TESTSoap" contract="WIN100TEST.WIN1500TESTSoap"
-        name="WIN1500TESTSoap" />
-      <endpoint address="http://localhost:54935/SmartBlindsWebService.asmx"
+      <endpoint address="http://smartblinds.eastus.cloudapp.azure.com/SmartBlindsWebService.asmx"
         binding="basicHttpBinding" bindingConfiguration="SmartBlindsWebServiceSoap"
         contract="sbWebService.SmartBlindsWebServiceSoap" name="SmartBlindsWebServiceSoap" />
+      <endpoint address="http://smartblinds.eastus.cloudapp.azure.com/SmartBlindsWebService.asmx"
+        binding="customBinding" bindingConfiguration="SmartBlindsWebServiceSoap12"
+        contract="sbWebService.SmartBlindsWebServiceSoap" name="SmartBlindsWebServiceSoap12" />
     </client>
   </system.serviceModel>
 </configuration>
