--- a/ASBproject/AutomatedSmartBlinds/WebAppServices1/SmartBlindsWebService.csproj
+++ b/ASBproject/AutomatedSmartBlinds/WebAppServices1/SmartBlindsWebService.csproj
@@ -70,6 +70,7 @@
   <ItemGroup>
     <None Include="packages.config" />
     <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
+    <None Include="Properties\PublishProfiles\windowsweb - Web Deploy.pubxml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -84,6 +85,7 @@
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="smartblinds.cs" />
+    <Compile Include="smartblindsUI.cs" />
     <Compile Include="SmartBlindsWebService.asmx.cs">
       <DependentUpon>SmartBlindsWebService.asmx</DependentUpon>
       <SubType>Component</SubType>
