--- a/ASBWeb/ASBWeb/Web.config
+++ b/ASBWeb/ASBWeb/Web.config
@@ -7,25 +7,17 @@
 <configuration>
   <connectionStrings>
     <add name="smartblindsdbConnectionString" connectionString="Data Source=1163PC2\SMARTBLINDSDB;Initial Catalog=smartblindsdb;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+      providerName="System.Data.SqlClient"/>
 
-    <add name="csWebDB" connectionString="Server=tcp:smartblindsdb.database.windows.net,1433;Initial Catalog=smartblindsdb;Persist Security Info=False;User ID=mcr0berts;Password=Michael.Roberts@oit.edu;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" providerName="System.Data.SqlClient"/>
+    <add name="csWebDB"
+      connectionString="Server=tcp:smartblindsdb.database.windows.net,1433;Initial Catalog=smartblindsdb;Persist Security Info=False;User ID=mcr0berts;Password=Michael.Roberts@oit.edu;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+      providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <system.web>
     <customErrors mode="Off"/>
     <compilation debug="true" targetFramework="4.7.2"/>
     <httpRuntime targetFramework="4.7.2"/>
   </system.web>
-  <system.codedom>
-    <compilers>
-      <compiler language="c#;cs;csharp" extension=".cs"
-        type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.CSharpCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-        warningLevel="4" compilerOptions="/langversion:default /nowarn:1659;1699;1701"/>
-      <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb"
-        type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35"
-        warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+"/>
-    </compilers>
-  </system.codedom>
 
   <system.serviceModel>
     <bindings>
