--- a/ASBWeb/ASBWeb/ASBWeb.csproj
+++ b/ASBWeb/ASBWeb/ASBWeb.csproj
@@ -97,6 +97,7 @@
     <Content Include="assets\img\adapt_icon\1.svg" />
     <Content Include="assets\img\adapt_icon\2.png" />
     <Content Include="assets\img\adapt_icon\3.png" />
+    <Content Include="assets\img\Automated_Smart_Blinds_Logo_Main_blinds.ico" />
     <Content Include="assets\img\banner\banner.png" />
     <Content Include="assets\img\banner\contact_bg.png" />
     <Content Include="assets\img\banner\dog.png" />
@@ -151,11 +152,18 @@
     <Content Include="assets\img\gallery\2.png" />
     <Content Include="assets\img\gallery\3.png" />
     <Content Include="assets\img\gallery\arrow_testimonial.png" />
+    <Content Include="assets\img\gallery\blinds-front-open.jpg" />
+    <Content Include="assets\img\gallery\front-closed.jpg" />
+    <Content Include="assets\img\gallery\front-down.jpg" />
     <Content Include="assets\img\gallery\map-footer.png" />
     <Content Include="assets\img\gallery\project1.png" />
+    <Content Include="assets\img\gallery\project2.jpg" />
     <Content Include="assets\img\gallery\project2.png" />
+    <Content Include="assets\img\gallery\project3.jpg" />
     <Content Include="assets\img\gallery\project3.png" />
+    <Content Include="assets\img\gallery\project4.jpg" />
     <Content Include="assets\img\gallery\project4.png" />
+    <Content Include="assets\img\gallery\project5.jpg" />
     <Content Include="assets\img\gallery\project5.png" />
     <Content Include="assets\img\gallery\project6.png" />
     <Content Include="assets\img\gallery\project_details.jpg" />
@@ -163,12 +171,22 @@
     <Content Include="assets\img\gallery\section-bg2.jpg" />
     <Content Include="assets\img\gallery\section-bg3.jpg" />
     <Content Include="assets\img\gallery\services_details.png" />
+    <Content Include="assets\img\gallery\side-down-closed.jpg" />
+    <Content Include="assets\img\gallery\side-front-view.png" />
     <Content Include="assets\img\gallery\video.png" />
+    <Content Include="assets\img\gallery\walleblinds.jpg" />
+    <Content Include="assets\img\gallery\work_in_progress.jpg" />
     <Content Include="assets\img\hero\about.jpg" />
     <Content Include="assets\img\hero\h1_hero.jpg" />
     <Content Include="assets\img\hero\project3.jpg" />
     <Content Include="assets\img\icon\form_icon.png" />
     <Content Include="assets\img\icon\services_icon1.png" />
+    <Content Include="assets\img\logo\Automated_Smart_Blinds_Logo_Header_blinds2.png" />
+    <Content Include="assets\img\logo\Automated_Smart_Blinds_Logo_Header_Test_Black.png" />
+    <Content Include="assets\img\logo\Automated_Smart_Blinds_Logo_Header_Test_White.png" />
+    <Content Include="assets\img\logo\Automated_Smart_Blinds_Logo_Main_blinds.ico" />
+    <Content Include="assets\img\logo\Automated_Smart_Blinds_Logo_Main_blinds.png" />
+    <Content Include="assets\img\logo\Blinds_Main.png" />
     <Content Include="assets\img\logo\form-iocn.jpg" />
     <Content Include="assets\img\logo\loder-logo.png" />
     <Content Include="assets\img\logo\logo.png" />
