--- a/PIC32/EFG(new)/SmartBlinds.X/nbproject/Makefile-genesis.properties
+++ b/PIC32/EFG(new)/SmartBlinds.X/nbproject/Makefile-genesis.properties
@@ -1,18 +1,18 @@
 #
-#Wed May 06 10:24:25 PDT 2020
-pic32mz2048efm144_winc1500.languagetoolchain.dir=D\:\\Program Files (x86)\\Microchip\\xc32\\v2.30\\bin
-pic32mz2048efg144_winc1500.languagetoolchain.dir=D\:\\Program Files (x86)\\Microchip\\xc32\\v2.30\\bin
+#Thu May 14 11:49:04 PDT 2020
+pic32mz2048efm144_winc1500.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc32\\v2.30\\bin
+pic32mz2048efg144_winc1500.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc32\\v2.30\\bin
 conf.ids=exp16_pic24fj128ga310_winc1500,pic32mz2048efg144_winc1500,pic32mz2048efm144_winc1500
-pic32mz2048efm144_winc1500.Pack.dfplocation=D\:\\Program Files (x86)\\Microchip\\MPLABX\\v5.30\\packs\\Microchip\\PIC32MZ-EF_DFP\\1.1.45
+pic32mz2048efm144_winc1500.Pack.dfplocation=C\:\\Program Files (x86)\\Microchip\\MPLABX\\v5.25\\packs\\Microchip\\PIC32MZ-EF_DFP\\1.0.20
 pic32mz2048efg144_winc1500.languagetoolchain.version=2.30
-exp16_pic24fj128ga310_winc1500.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=7f2420dbff4a943a618b911f4b1e6a5c
-pic32mz2048efg144_winc1500.Pack.dfplocation=C\:\\Users\\thede\\.mchp_packs\\Microchip\\PIC32MZ-EF_DFP\\1.0.20
-configurations-xml=9587c677ae52e828d0a5c66a35e35e4f
+exp16_pic24fj128ga310_winc1500.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=1a20d9bf64c9a17b5eea0e731fcffb03
+pic32mz2048efg144_winc1500.Pack.dfplocation=C\:\\Program Files (x86)\\Microchip\\MPLABX\\v5.25\\packs\\Microchip\\PIC32MZ-EF_DFP\\1.0.20
+configurations-xml=4e68ac20558b673970d53c5c57ef0679
 exp16_pic24fj128ga310_winc1500.languagetoolchain.version=2.30
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=7cd2eead2ea6964989cbf02efe721a76
-exp16_pic24fj128ga310_winc1500.Pack.dfplocation=C\:\\Users\\thede\\.mchp_packs\\Microchip\\PIC32MZ-EF_DFP\\1.0.20
-pic32mz2048efm144_winc1500.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=7f2420dbff4a943a618b911f4b1e6a5c
-pic32mz2048efg144_winc1500.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=7f2420dbff4a943a618b911f4b1e6a5c
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=6e453b0cf7f7da72a932cfdb2f655401
+exp16_pic24fj128ga310_winc1500.Pack.dfplocation=C\:\\Program Files (x86)\\Microchip\\MPLABX\\v5.25\\packs\\Microchip\\PIC32MZ-EF_DFP\\1.0.20
+pic32mz2048efm144_winc1500.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=1a20d9bf64c9a17b5eea0e731fcffb03
+pic32mz2048efg144_winc1500.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=1a20d9bf64c9a17b5eea0e731fcffb03
 pic32mz2048efm144_winc1500.languagetoolchain.version=2.30
 host.platform=windows
-exp16_pic24fj128ga310_winc1500.languagetoolchain.dir=D\:\\Program Files (x86)\\Microchip\\xc32\\v2.30\\bin
+exp16_pic24fj128ga310_winc1500.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc32\\v2.30\\bin
